Customer- side (bổ sung hoàn thiện)

--- a/WebAppOnlineShop/Areas/Administrator/Views/Customers/Details.cshtml
+++ b/WebAppOnlineShop/Areas/Administrator/Views/Customers/Details.cshtml
@@ -94,24 +94,14 @@
                 <div class="col-sm-2"></div>
 
                 <div class="col-sm-3" style="text-align: left; font-weight: bold;">
-                    @Html.DisplayNameFor(model => model.Address1)
+                    @Html.DisplayNameFor(model => model.Address)
                 </div>
                 <div class="col-sm-7">
-                    @Html.DisplayFor(model => model.Address1)
+                    @Html.DisplayFor(model => model.Address)
                 </div>
             </div>
             <div class="row" style="padding-top: 20px"></div>
-            <div class="row">
-                <div class="col-sm-2"></div>
-
-                <div class="col-sm-3" style="text-align: left; font-weight: bold;">
-                    @Html.DisplayNameFor(model => model.Addrees2)
-                </div>
-                <div class="col-sm-7">
-                    @Html.DisplayFor(model => model.Addrees2)
-                </div>
-            </div>
-            <div class="row" style="padding-top: 20px"></div>
+            
             <div class="row">
                 <div class="col-sm-2"></div>
 
