--- a/WebAppOnlineShop/Areas/Administrator/Views/Customers/Edit.cshtml
+++ b/WebAppOnlineShop/Areas/Administrator/Views/Customers/Edit.cshtml
@@ -94,20 +94,14 @@
                 </div>
 
                 <div class="form-group">
-                    @Html.LabelFor(model => model.Address1, htmlAttributes: new { @class = "control-label col-md-3" })
+                    @Html.LabelFor(model => model.Address, htmlAttributes: new { @class = "control-label col-md-3" })
                     <div class="col-md-5">
-                        @Html.EditorFor(model => model.Address1, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Address1, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.Address, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Address, "", new { @class = "text-danger" })
                     </div>
                 </div>
 
-                <div class="form-group">
-                    @Html.LabelFor(model => model.Addrees2, htmlAttributes: new { @class = "control-label col-md-3" })
-                    <div class="col-md-5">
-                        @Html.EditorFor(model => model.Addrees2, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Addrees2, "", new { @class = "text-danger" })
-                    </div>
-                </div>
+                <
 
                 <div class="form-group">
                     @Html.LabelFor(model => model.PhoneContactPerson, htmlAttributes: new { @class = "control-label col-md-3" })
