--- a/WebAppOnlineShop/Views/Home/Index.cshtml
+++ b/WebAppOnlineShop/Views/Home/Index.cshtml
@@ -1,31 +1,183 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+    var listHotSales = (List<Models.EF.Product>)ViewBag.HotSales;
+    var listOurProducts = (List<Models.EF.Product>)ViewBag.OurProducts;
+    var newProducts = (List<Models.EF.Product>)ViewBag.NewProduct;
+
+}
+@section Slide{
+    <div class="shoes-grid">
+        <a href="single.html">
+            <div class="wrap-in">
+                <div class="wmuSlider example1 slide-grid">
+                    <div class="wmuSliderWrapper">
+                        <article style="position: absolute; width: 100%; opacity: 0;">
+                            <div class="banner-matter">
+                                <div class="col-md-5 banner-bag">
+                                    <img class="img-responsive " src="/Assets/Client/img/slide4.png" alt=" " />
+                                </div>
+                                <div class="col-md-7 banner-off">
+                                    <h2>FLAT 50% 0FF</h2>
+                                    <label>FOR ALL PURCHASE <b>VALUE</b></label>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                                    <span class="on-get">GET NOW</span>
+                                </div>
+
+                                <div class="clearfix"> </div>
+                            </div>
+
+                        </article>
+                        <article style="position: absolute; width: 100%; opacity: 0;">
+                            <div class="banner-matter">
+                                <div class="col-md-5 banner-bag">
+                                    <img class="img-responsive " src="/Assets/Client/img/slide5.png" alt=" " />
+                                </div>
+                                <div class="col-md-7 banner-off">
+                                    <h2>FLAT 50% 0FF</h2>
+                                    <label>FOR ALL PURCHASE <b>VALUE</b></label>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                                    <span class="on-get">GET NOW</span>
+                                </div>
+
+                                <div class="clearfix"> </div>
+                            </div>
+
+                        </article>
+                        <article style="position: absolute; width: 100%; opacity: 0;">
+                            <div class="banner-matter">
+                                <div class="col-md-5 banner-bag">
+                                    <img class="img-responsive " src="/Assets/Client/img/slide6.png" alt=" " />
+                                </div>
+                                <div class="col-md-7 banner-off">
+                                    <h2>FLAT 50% 0FF</h2>
+                                    <label>FOR ALL PURCHASE <b>VALUE</b></label>
+                                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et </p>
+                                    <span class="on-get">GET NOW</span>
+                                </div>
+
+                                <div class="clearfix"> </div>
+                            </div>
+
+                        </article>
+
+                    </div>
+        </a>
+        <ul class="wmuSliderPagination">
+            <li><a href="#" class="">0</a></li>
+            <li><a href="#" class="">1</a></li>
+            <li><a href="#" class="">2</a></li>
+        </ul>
+        <script src="/Assets/Client/js/jquery.wmuSlider.js"></script>
+        <script>
+            $('.example1').wmuSlider();
+        </script>
+    </div>
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
+@section category
+{
+    <div class="sub-cate">
+        @{Html.RenderAction("ProductCategory", "Product");}
+        <!--initiate accordion-->
+        <script type="text/javascript">
+            
+        </script>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <div class="products">
+            <h5 class="latest-product">NEW PRODUCT</h5>
+            <!--  <a class="view-all" href="product.html">VIEW ALL<span> </span></a> 	-->
+        </div>
+        <div class=" chain-grid menu-chain">
+            @foreach (var item in newProducts)
+            {
+                var url = "/details/" + item.MetaKeyword + "-" + item.ID;
+                <a href="@url"><img class="img-responsive chain" src="@item.Image" alt=" " /></a>
+                <div class="grid-chain-bottom chain-watch">
+                    <span class="actual dolor-left-grid">@item.Price</span>
+                    <h6><a href="@url">@item.ProductName</a></h6>
+                </div>
+            }
+        </div>
+        <a class="view-all all-product" href="/product">VIEW ALL PRODUCTS<span> </span></a>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+}
+
+
+<div class="products">
+    <h5 class="latest-product">OUR PRODUCTS</h5>
+    <!--  <a class="view-all" href="product.html">VIEW ALL<span> </span></a> 	-->
+</div>
+<div class="product-left">
+    @foreach (var item in listOurProducts)
+    {
+        var url = "/details/" + item.MetaKeyword + "-" + item.ID;
+        <div class="col-md-4 chain-grid grid-top-chain" style="margin: 10px;">
+            <a href="@url"><img class="img-responsive chain" src="@item.Image" style="width: 200px; height: 250px;" alt="@item.ProductName" /></a>
+            <span class="star"> </span>
+            <div class="grid-chain-bottom">
+                <h6><a href="@url">@item.ProductName</a></h6>
+                <div class="star-price">
+                    <div class="dolor-grid">
+                        <span class="actual">@item.Price</span>
+                        <span class="rating">
+                            <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
+                            <label for="rating-input-1-5" class="rating-star1"> </label>
+                            <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1">
+                            <label for="rating-input-1-4" class="rating-star1"> </label>
+                            <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1">
+                            <label for="rating-input-1-3" class="rating-star"> </label>
+                            <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1">
+                            <label for="rating-input-1-2" class="rating-star"> </label>
+                            <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1">
+                            <label for="rating-input-1-1" class="rating-star"> </label>
+                        </span>
+                    </div>
+                    <a class="now-get get-cart" href="/add-to-cart?productId=@item.ID&quantity=1">ADD TO CART</a>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+        </div>
+
+    }
+
+    <div class="clearfix"> </div>
+</div>
+<div class="products">
+    <h5 class="latest-product">HOT SALES</h5>
+    <!--  <a class="view-all" href="product.html">VIEW ALL<span> </span></a> 	-->
+</div>
+<div class="product-left">
+    @foreach (var item in listHotSales)
+    {
+        var url = "/details/" + item.MetaKeyword + "-" + item.ID;
+        <div class="col-md-4 chain-grid grid-top-chain" style="margin: 10px;">
+            <a href="@url"><img class="img-responsive chain" src="@item.Image" style="width: 200px; height: 250px;" alt="@item.ProductName" /></a>
+            <span class="star"> </span>
+            <div class="grid-chain-bottom">
+                <h6><a href="@url">@item.ProductName</a></h6>
+                <div class="star-price">
+                    <div class="dolor-grid">
+                        <span class="actual">@item.Price</span>
+                        <span class="rating">
+                            <input type="radio" class="rating-input" id="rating-input-1-5" name="rating-input-1">
+                            <label for="rating-input-1-5" class="rating-star1"> </label>
+                            <input type="radio" class="rating-input" id="rating-input-1-4" name="rating-input-1">
+                            <label for="rating-input-1-4" class="rating-star1"> </label>
+                            <input type="radio" class="rating-input" id="rating-input-1-3" name="rating-input-1">
+                            <label for="rating-input-1-3" class="rating-star"> </label>
+                            <input type="radio" class="rating-input" id="rating-input-1-2" name="rating-input-1">
+                            <label for="rating-input-1-2" class="rating-star"> </label>
+                            <input type="radio" class="rating-input" id="rating-input-1-1" name="rating-input-1">
+                            <label for="rating-input-1-1" class="rating-star"> </label>
+                        </span>
+                    </div>
+                    <a class="now-get get-cart" href="/add-to-cart?productId=@item.ID&quantity=1">ADD TO CART</a>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+        </div>
+
+    }
+    <div class="clearfix"> </div>
 </div>
