--- a/WebAppOnlineShop/Views/Shared/_Layout.cshtml
+++ b/WebAppOnlineShop/Views/Shared/_Layout.cshtml
@@ -1,42 +1,169 @@
-﻿<!DOCTYPE html>
+﻿@{
+    var session = (WebAppOnlineShop.Commons.UserLogin)Session[WebAppOnlineShop.Commons.CommonConstants.CUSTOMER_SESSION];
+}
+<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    <title>Web Application Online Shop Dien Tu</title>
+    <link href="/Assets/Client/css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <!--theme-style-->
+    <link href="/Assets/Client/css/style.css" rel="stylesheet" type="text/css" media="all" />
+    <!--//theme-style-->
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <link href="/Assets/Clientcss/bootstrap.min.css" rel="stylesheet">
+    <link href="/Assets/Client/css/jquery-ui.css" rel="stylesheet" />
+    <link href="/Assets/Clientcss/global.css" rel="stylesheet">
+    <link href="/Assets/Clientcss/cart.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/Assets/Clientcss/font-awesome.min.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Montaga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Farro&display=swap" rel="stylesheet">
+    <script src="/Assets/Clients/bootstrap.min.js"></script>
+    <script src="/Assets/Client/js/jquery-2.1.1.min.js"></script>
+    <script src="/Assets/Client/js/jquery-ui.js"></script>
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <!--fonts-->
+    <!--//fonts-->
+    <!--script-->
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
+    <!--header-->
+    <div class="header">
+        <div class="bottom-header">
+            <div class="container">
+                <div class="header-bottom-left">
+                    <div class="logo" style="display: inline-flex;">
+                        <a href="/Home/Index"><img src="/Assets/Client/img/logo4.png" alt=" " /></a>
+                        <h4 style="color: #000000 ; padding-left: 10px; padding-top: 10px;"><strong>SHOP BY YOUR WAY</strong></h4>
+                    </div>
+                    <div class="search">
+                        <form action="/search" method="get">
+                            <input type="text" id="txtKeyword" name= "keyword" placeholder="Search for ...">
+                            <input type="submit" value="SEARCH">
+                        </form>
+
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="header-bottom-right">
+                    @if (session == null)
+                    {
+                        <ul class="login">
+                            <li><a href="/login"><span> </span>LOGIN</a></li> |
+                            <li><a href="/register">SIGNUP</a></li>
+                        </ul>
+                    }
+                    else
+                    {
+                        <ul class="login">
+                            <li><a href="/profile">@session.CustomerName</a></li> |
+                            <li>@Html.ActionLink("Logout", "Logout", "Customer")</li>
+                        </ul>
+                    }
+                    <div class="cart"><a href="/my-cart"><span> </span>CART</a></div>
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="clearfix"> </div>
             </div>
         </div>
     </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    <!---->
+    <div class="container">
+        @RenderSection("Slide", required: false)
+    </div>
+    </a>
+    <!---->
+    <!-- <div class="shoes-grid-left">
+    <a href="single.html">
+            <div class="col-md-6 con-sed-grid">
+
+                <div class=" elit-grid">
+
+                    <h4>consectetur  elit</h4>
+                    <label>FOR ALL PURCHASE VALUE</label>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+                    <span class="on-get">GET NOW</span>
+                </div>
+                <img class="img-responsive shoe-left" src="../images/sh.jpg" alt=" " />
+
+                <div class="clearfix"> </div>
+
+            </div>
+            </a>
+            <a href="single.html">
+            <div class="col-md-6 con-sed-grid sed-left-top">
+                <div class=" elit-grid">
+                    <h4>consectetur  elit</h4>
+                    <label>FOR ALL PURCHASE VALUE</label>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, </p>
+                    <span class="on-get">GET NOW</span>
+                </div>
+                <img class="img-responsive shoe-left" src="../images/wa.jpg" alt=" " />
+
+                <div class="clearfix"> </div>
+            </div>
+            </a>
+         </div>dbn-->
+    @RenderBody()
+    <div class="clearfix"> </div>
+    </div>
+    @RenderSection("category", required: false)
+    <div class="clearfix"> </div>
     </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    <!---->
+    <div class="footer">
+        <div class="footer-top">
+            <div class="container">
+                <div class="col-lg-6" style="display: inline-flex;">
+                    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+                    <span class="iconify" data-inline="false" data-icon="vaadin:piggy-bank-coin" style="font-size: 50px; padding-right: 10px;"></span>
+                    <h4 style="padding-top: 5px;">SALES PRICE, GOOD WARRANTY</h4>
+                </div>
+                <div class="col-lg-6" style="display: inline-flex;">
+                    <script src="https://code.iconify.design/1/1.0.6/iconify.min.js"></script>
+                    <span class="iconify" data-inline="false" data-icon="ps:row-setting" style="font-size: 50px; padding-right: 10px;"></span>
+                    <h4>REPAIR SERVICES, PRESTIGE WARRANTY, FAST, CONVENIENT</h4>
+                </div>
+                <div class="clearfix"> </div>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <div class="container">
+                <div class="col-lg-6">
+                    <h3><strong>The standard chunk of Lorem</strong></h3>
+                    <ul>
+                        <p>
+                            The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+                        </p>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h3><strong>Quick Links</strong></h3>
+                    <ul>
+                        <li><a href="#">About Us</a></li>
+                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="#">Help</a></li>
+                        <li><a href="#">FAQs</a></li>
+                        <li><a href="#">Policy</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3">
+                    <h3><strong>Get In Touch</strong></h3>
+                    <ul>
+                        <li>Address:&nbsp;406 Nguyễn Tri Phương, phường 4, quận 10, TPHCM &nbsp;<a href="">Way to go</a></li>
+                        <li>Phone:&nbsp;0901446256&nbsp;</li>
+                        <li>
+                            Email:&nbsp;
+                            <a href="mailto:meowithluv.vn@gmail.com">vuonglanly1507@gmail.com</a>
+                        </li>
+
+                </div>
+
+                <div class="clearfix"> </div>
+            </div>
+        </div>
+    </div>
+    <script src="~/Assets/Client/js/jsController/baseController.js"></script>
+    @RenderSection("jsFooter", required: false)
 </body>
 </html>
